Changed button's margin top to fix overflow

--- a/decodificador/src/assets/components/Button/styles.css
+++ b/decodificador/src/assets/components/Button/styles.css
@@ -5,6 +5,7 @@
     height: 60px;
     font-size: 16px;
     margin-right: 40px;
+    margin-top: -30px;
 }
 
 .btn:hover {
